[package]
name = "arborea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborea_derive = { path = "../arborea_derive" }
arborea_dsl = { path = "../arborea_dsl" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tree-sitter = "0.20.9"
