[package]
name = "quercus_generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parallel = ["cc/parallel"]

[dependencies]
cc = "1.0.78"
quercus_derive = { path = "../quercus_derive" }
quercus_dsl = { path = "../quercus_dsl" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tree-sitter-cli = "0.20.7"
tree-sitter = "0.20.9"
