[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang_grammar = { path = "lang_grammar" }
quercus = { path = "../../quercus" }
tree-sitter = "0.20.9"

[build-dependencies]
lang_grammar = { path = "lang_grammar" }
quercus = { path = "../../quercus" }
quercus_generate = { path = "../../quercus_generate" }
